--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,11 @@ mod_group_id=com.cake.drill_drain
 mod_authors=YourNameHere, OtherNameHere
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+
+create_version = 6.0.3-46
+ponder_version = 1.0.45
+flywheel_version = 1.0.1
+registrate_version = MC1.21-1.3.0+62
+
+jei_version = 19.21.0.247
+
