--- a/gradle.properties
+++ b/gradle.properties
@@ -40,9 +40,9 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.cake.drill_drain
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=Cake, Kipti
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Drill with ease! Drain fluids from your quarries with the drill drain attachment.
 
 create_version = 6.0.3-46
 ponder_version = 1.0.45
